# e-nowshop-api-invetory

./: Dockerfile  Jenkinsfile  README.md
cid/: deployments.yaml  service.yaml
src/: .python-version  Makefile  app.py  config.py  pyproject.toml  requirements.txt
src/enowshop/domain/s3/: controller.py  s3_client.py  service.py
src/enowshop/endpoints/: dependecies.py
src/enowshop/endpoints/category/: controller.py  repository.py  schema.py  service.py
src/enowshop/endpoints/products/: controller.py  repository.py  schema.py  service.py
src/enowshop/endpoints/promotions/: controller.py  repository.py  schema.py  service.py
src/enowshop/infrastructure/: containers.py
src/enowshop/infrastructure/database/: database_sql.py
