[tool.poetry]
name = "e-nowshop-api-inventory"
version = "0.1.0"
description = ""
authors = ["GustavoDanielSW, <gustavodanieldetoledo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.40"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
