[tool.poetry]
name = "e-nowshop-api-inventory"
version = "0.1.0"
description = ""
authors = ["GustavoDanielSW, <gustavodanieldetoledo@gmail.com>"]

[[tool.poetry.source]]
name = "enowsho-pypiserver"
url = "http://18.207.202.104:8080/simple/"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.40"
fastapi = "^0.82.0"
httpx = "^0.23.0"
uvicorn = "^0.18.3"
dependency-injector = "^4.40.0"
asyncpg = "^0.26.0"
jose = "^1.0.0"
python-jose = "^3.3.0"
pyscript = "^0.2.5"
boto3 = "^1.26.16"
python-multipart = "^0.0.5"

enowshop-models= {version = "v0.4.19", source = "enowsho-pypiserver"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
